--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "vite build",
-    "watch": "nodemon --watch app/static/js --ignore app/static/js/main.js --ext js,jsx,css --exec \"vite build\""
+    "watch": "nodemon --watch app/static/js --ignore app/static/js/main.js --ignore 'app/static/js/*-*.js' --ext js,jsx,css --exec \"vite build\""
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -38,6 +38,6 @@
     "concurrently": "^8.2.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "vite": "^7.1.8"
+    "vite": "^6.0.0"
   }
 }
