Updating .env.template from sheets version to postgresql version

--- a/.env.template
+++ b/.env.template
@@ -16,9 +16,6 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 # Get your project key from: https://app.posthog.com/project/settings
 POSTHOG_API_KEY=your_posthog_project_key_here
 
-# Google OAuth Configuration
-# Get these from Google Cloud Console: https://console.cloud.google.com/
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
-GOOGLE_PROJECT_ID=your_google_project_id_here
-GOOGLE_SPREADSHEET_ID=your_google_spreadsheet_id_here
+# PostgreSQL Database Configuration
+# Connection string format: postgresql://username:password@host:port/database_name
+DATABASE_URL=postgresql://gpra:your_password_here@localhost:5432/gpra_dev
